--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             </div>
         </div>
     </div>
-
+<script>
 (function() {
     // Declare as variáveis no escopo global deste módulo
     let conhecimento = 0;
@@ -378,5 +378,6 @@
 
     console.log('Script inicializado. Valores iniciais:', { conhecimento, grana, codigo, dados });
 })()
+</script>
 </body>
 </html>
