--- a/index.html
+++ b/index.html
@@ -179,29 +179,28 @@
 		
         <div class="right-column">
             <div class="generation-panel">
-                <div class="panel-title">Geradores de Recursos</div>
-                <div class="panel resource-generation" class="panel hidden">
+ 		<div id="conhecimentoGenerationPanel" class="panel resource-generation">
                     <h3>Gerar Conhecimento</h3>
                     <div class="progress-bar"><div class="progress" id="conhecimentoProgress1"></div></div>
                     <div class="timer" id="conhecimentoTimer1"></div>
                     <button id="generateConhecimento1">Gerar Conhecimento (Custo: 10 Conhecimento)</button>
                     <p>Nível: <span id="conhecimentoLevel1">1</span></p>
                 </div>
-                <div class="panel resource-generation" class="panel hidden">
+                <div id="granaGenerationPanel" class="panel resource-generation hidden">
                     <h3>Gerar Grana</h3>
                     <div class="progress-bar"><div class="progress" id="granaProgress1"></div></div>
                     <div class="timer" id="granaTimer1"></div>
                     <button id="generateGrana1">Gerar Grana (Custo: 10 Conhecimento)</button>
                     <p>Nível: <span id="granaLevel1">1</span></p>
                 </div>
-                <div class="panel resource-generation" class="panel hidden">
+                <div id="codigoGenerationPanel" class="panel resource-generation hidden">
                     <h3>Gerar Código</h3>
                     <div class="progress-bar"><div class="progress" id="codigoProgress1"></div></div>
                     <div class="timer" id="codigoTimer1"></div>
                     <button id="generateCodigo1">Gerar Código (Custo: 10 Conhecimento)</button>
                     <p>Nível: <span id="codigoLevel1">1</span></p>
                 </div>
-                <div class="panel resource-generation">
+                <div id="dadosGenerationPanel" class="panel resource-generation hidden">
                     <h3>Gerar Dados</h3>
                     <div class="progress-bar"><div class="progress" id="dadosProgress1"></div></div>
                     <div class="timer" id="dadosTimer1"></div>
