--- a/index.html
+++ b/index.html
@@ -210,8 +210,7 @@
 </div>
 		<div class="upgrades-panel">
     		<div class="panel-title">Upgrades</div>
-<!--                 <button id="unlockGrana" class="upgrade-button" data-cost="100">G</button> -->
-		<button id="upgradeButton1" onclick="buyUpgrade('upgradeButton1', 50)
+		<button id="unlockGrana" class="upgrade-button" data-cost="100">G</button>		
                 <button id="unlockCodigo" class="upgrade-button" data-cost="200">C</button>
                 <button id="unlockDados" class="upgrade-button" data-cost="300">D</button>
 			
