--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         document.getElementById('unlockDados').addEventListener('click', () => buyUpgrade('unlockDados', 300));
 
         // Inicialização do jogo (exemplo)
-        // document.getElementById('conhecimentoCounter').textContent = '500'; // Começar com 500 de conhecimento
+        document.getElementById('conhecimentoCounter').textContent = '500'; // Começar com 500 de conhecimento
 
 	
     function getGenerationAmount(resource) {
