--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 document.getElementById('conhecimentoCounter').textContent = conhecimento - cost;
                 
                 // Esconder o botão
-                button.style.display = 'none';
+                button.classList.add('hidden');
 
                 // Aqui você pode adicionar a lógica para ativar o recurso desbloqueado
                 console.log(`Upgrade ${buttonId} comprado!`);
